--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Personal Introduction Page of Renz R Lopez">
     <title>My Introduction</title>
 </head>
-<body style="background-image: url('Bg.jpg'); background-repeat: no-repeat; background-size: cover;">
+<body style="background-image: url('img/Bg.jpg'); background-repeat: no-repeat; background-size: cover;">
 <center>
     <br><br><br><br><br><br>
 <header>
