added simple css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Renz R Lopez">
     <meta name="description" content="Personal Introduction Page of Renz R Lopez">
+    <link rel="stylesheet" href="css/index.css">
     <title>My Introduction</title>
 </head>
 <body style="background-image: url('img/Bg.jpg'); background-repeat: no-repeat; background-size: cover;">
