--- a/table.html
+++ b/table.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Renz R Lopez">
     <meta name="description" content="Activity 2 Table by Renz R Lopez">
+    <link rel="stylesheet" href="css/table.css">
     <title>Activity 2 Table</title>
 </head>
 <body style="background-image: url('img/Bg.jpg'); background-repeat: no-repeat; background-size: cover;">
