fixed css stuff

--- a/table.html
+++ b/table.html
@@ -44,7 +44,7 @@
                     Kaguya-sama: Love is War
                 </a>
             </td>
-            <td>
+            <td colspan="2">
                 <a href="https://myanimelist.net/manga/130934/Otonari_no_Tenshi-sama_ni_Itsunomanika_Dame_Ningen_ni_Sareteita_Ken" target="_blank">
                     <img src="img/angel2.jpg" alt="The Angel Next Door Spoils Me Rotten" width="300"><br>
                     The Angel Next Door Spoils Me Rotten
@@ -72,14 +72,13 @@
                     To Be Hero X
                 </a>
             </td>
-            <td>
+            <td  colspan="2">
                 <a href="https://www.crunchyroll.com/series/G9VHN91DJ/the-angel-next-door-spoils-me-rotten" target="_blank">
                     <img src="img/angel.jpg" alt="Angel Next Door Anime" width="300"><br>
                     The Angel Next Door Spoils Me Rotten
                 </a>
             </td>
         </tr>
-
         <tr>
             <td><h3>Movies</h3></td>
             <td>
